--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -277,6 +277,7 @@ span[itemprop="honorificSuffix"] {
 
 /* Strukturen Personenshortcode Content */
 
+.startpage-sidebar,
 .portalpage-content,
 .startpage-blogroll,
 .content-inline {
