--- a/css/sass/structure/layout/_layout.scss
+++ b/css/sass/structure/layout/_layout.scss
@@ -18,4 +18,4 @@
 @import "error-templates";
 
 // Old grid from bootstrap 2.3, cause span classes are still needed in some places  
-@import "base";
+@import "oldgrid";
