--- a/css/sass/frameworks/_bootstrap.scss
+++ b/css/sass/frameworks/_bootstrap.scss
@@ -9,7 +9,7 @@
 @import "bootstrap/mixins";
 
 // Reset and dependencies
-// @import "bootstrap/normalize";
+@import "bootstrap/normalize";
  
 // @import "bootstrap/print";
 // @import "bootstrap/glyphicons";
