--- a/css/sass/structure/layout/_page-templates.scss
+++ b/css/sass/structure/layout/_page-templates.scss
@@ -33,8 +33,22 @@
          width: 100%;
 
     }
-
     @media (min-width: $screen-md) {
+	 display: inline-block;
+       
+            .sidebar-inline {
+                display: inline-block;
+                float: right;
+                width: 237px;
+                flex: none; 
+            }
+            .content-inline {
+                width: 100%;
+                display: block;
+            }
+    }
+    /*
+    @media (min-width: $screen-lg) {
         // 992 - 
         display: flex;   
         flex-wrap: nowrap;
@@ -43,7 +57,7 @@
 
         .sidebar-inline,
         .content-inline {
-             display: inline-block;
+             display: block;
 
         }
         .content-inline {
@@ -60,8 +74,10 @@
         }
 
     }
+    */
     
     * {
 	backface-visibility: inherit;
     }
 }
+
