--- a/css/sass/elements/_paragraphs.scss
+++ b/css/sass/elements/_paragraphs.scss
@@ -55,8 +55,13 @@ p {
 		background: $colorPrimaryHero;
 		@include px2rem($font-size-footer);
 	}
+	
 }
 
+#content .accordion p:empty,
+.accordion p:empty {
+    display: none;
+}
 p.presentationtitle {
     font-weight: bold;
     @include px2rem($font-size-h1,  $font-size-base, $font-size-h1 * 1.3);
