- CSS Anpassungen bei Alerts und Forms

--- a/css/sass/plugins/_rrze-elements.scss
+++ b/css/sass/plugins/_rrze-elements.scss
@@ -239,6 +239,18 @@ button.expand-all {
 	 display: inherit;
      }
 }
+/*-----------------------------------------------------------------------------------*/
+/* Alerts
+/*-----------------------------------------------------------------------------------*/
+.alert {
+    h2 {
+	padding-top: 7px;
+    }
+     p {
+	font-size: 1.1rem;
+	padding: 5px 0;  
+    }
+}
 
 
 /*-----------------------------------------------------------------------------------*/
