Schriftanpassung bei Alerts. Nur bei Alert-Danger auch die Schrift um 10% größer

--- a/css/sass/plugins/_rrze-elements.scss
+++ b/css/sass/plugins/_rrze-elements.scss
@@ -247,8 +247,11 @@ button.expand-all {
 	padding-top: 7px;
     }
      p {
-	font-size: 1.1rem;
+	
 	padding: 5px 0;  
+    }
+    &.alert-danger p {
+	font-size: 1.1rem;
     }
 }
 
