Helper class for full width image

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -353,6 +353,9 @@ $container-lg: 970px;
 $container-xl: 1000px;
 $container-xxl: 1100px;
 
+// max width of the homepage hero image, used by the plugin "ILI FAU Templates"
+$max-width-hero: 1920px;
+
 // Bootstrap Adjustments
 $fau-gutter-width: 30px;
 
