--- a/style.css
+++ b/style.css
@@ -6932,7 +6932,8 @@ h3.breadcrumb_sitetitle {
       height: inherit;
       margin: 0;
       background: #003366;
-      color: #fff; }
+      color: #fff;
+      width: calc(100% - 100px); }
       #hero .search-input .search-text input[type="text"]:focus, #hero .search-input .search-text input[type="text"]:hover {
         background-color: #1f4d7a;
         border: 1px solid #1f4d7a; }
@@ -6945,7 +6946,8 @@ h3.breadcrumb_sitetitle {
       color: #000;
       padding: 5px 10px;
       height: inherit;
-      margin-left: -30px; }
+      margin-left: -30px;
+      border: none; }
       #hero .search-input .search-text input[type="submit"]:focus, #hero .search-input .search-text input[type="submit"]:hover {
         background-color: #dde5f0; }
     #hero .search-input .search-text .searchicon {
